# library_catalog_practis

./: .dockerignore  .env  .env.example  .gitignore  DETAILED_ASSIGNMENT_FIXED (1).md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  test_openlibrary.py
alembic/: env.py
alembic/versions/: 39e8851b36d0_create_books_table.py  7e5c2f1d9a1b_create_users_table.py
src/library_catalog/: main.py
src/library_catalog/api/: dependencies.py
src/library_catalog/api/v1/routers/: auth.py  books.py  health.py
src/library_catalog/api/v1/schemas/: auth.py  book.py  common.py
src/library_catalog/core/: cache.py  config.py  database.py  exceptions.py  logging_config.py  security.py
src/library_catalog/core/__pycache__/: config.cpython-311.pyc.2004576569936
src/library_catalog/data/models/: book.py  user.py
src/library_catalog/data/repositories/: base_repository.py  book_repository.py  user_repository.py
src/library_catalog/domain/: exceptions.py
src/library_catalog/domain/mappers/: book_mapper.py
src/library_catalog/domain/services/: auth_service.py  book_service.py
tests/: manual_crud_check.md  manual_crud_check_log.txt
